--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -14,5 +14,8 @@
 <body>
   <!-- Include the script that builds the page and powers Decap CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script>
+    CMS.registerPreviewStyle("/style.css");
+  </script>
 </body>
 </html>
