fixed style of Articles, Links, 404

--- a/src/404.html
+++ b/src/404.html
@@ -1,14 +1,10 @@
 ---
-layout: base.njk
+layout: article.njk
 title: 404 page not found
 permalink: /404.html
 ---
 
-
-<div class="section container">
-    <h1 class="section-title">404 page not found</h1>
-    <p>The page you were looking for could not be found.</p>
-    <a href="javascript:history.back()">Get back</a>
-    <span>or to</span>
-    <a href="/">Home</a>
-</div>
+<p>The page you were looking for could not be found.</p>
+<a href="javascript:history.back()">Get back</a>
+<span>or to</span>
+<a href="/">Home</a>
